# faiss-rs

faiss-sys/: Cargo.toml  build.rs
